--- a/Øljeopardy/Views/Home/Game.cshtml
+++ b/Øljeopardy/Views/Home/Game.cshtml
@@ -1,4 +1,5 @@
-﻿@model Oljeopardy.Models.JeopardyViewModels.GameViewModel
+﻿@using Newtonsoft.Json
+@model Oljeopardy.Models.JeopardyViewModels.GameViewModel
 <h1>@ViewData["Title"]</h1>
 <hr />
 
@@ -235,5 +236,5 @@ else
 <div id="gameBottomMargin" style="height: 30px;"></div>
 
 <script>
-
+    var gameId = '@(Model.Game.Id)';
 </script>
