--- a/Øljeopardy/Styles/Main.scss
+++ b/Øljeopardy/Styles/Main.scss
@@ -250,10 +250,8 @@ hr {
 }
 
 .spinner {
-    display: inline-block;
-    opacity: 0;
-    max-width: 0;
-    /* Duration fixed since we animate additional hidden width */
+    max-width: 50px;
+    display: none;
 }
 
 .has-spinner.active {
@@ -261,9 +259,7 @@ hr {
 }
 
 .has-spinner.active .spinner {
-    opacity: 1;
-    max-width: 50px;
-    /* More than it will ever come, notice that this affects on animation duration */
+    display: inline-block
 }
 
 .has-spinner.active .btn-text {
