--- a/Øljeopardy/wwwroot/css/Main.css
+++ b/Øljeopardy/wwwroot/css/Main.css
@@ -214,18 +214,14 @@ hr {
   align-items: center; }
 
 .spinner {
-  display: inline-block;
-  opacity: 0;
-  max-width: 0;
-  /* Duration fixed since we animate additional hidden width */ }
+  max-width: 50px;
+  display: none; }
 
 .has-spinner.active {
   cursor: progress; }
 
 .has-spinner.active .spinner {
-  opacity: 1;
-  max-width: 50px;
-  /* More than it will ever come, notice that this affects on animation duration */ }
+  display: inline-block; }
 
 .has-spinner.active .btn-text {
   display: none; }
