Removed version number from UI

--- a/Øljeopardy/Views/Shared/Navbar.cshtml
+++ b/Øljeopardy/Views/Shared/Navbar.cshtml
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a onclick="loadMain()" class="navbar-brand"><i class="fa fa-home navbar-icon" aria-hidden="true"></i>Øljeopardy 1.1.2</a>
+            <a onclick="loadMain()" class="navbar-brand"><i class="fa fa-home navbar-icon" aria-hidden="true"></i>Øljeopardy</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
