Updated to FontAwesome 5

--- a/Øljeopardy/Views/Category/Category.cshtml
+++ b/Øljeopardy/Views/Category/Category.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="row answer-question-container">
                 <div class="col-xs-1 col-xs-offset-1 answer-label-container">
-                    <i class="fa fa-exclamation fa-lg" aria-hidden="true"></i>
+                    <i class="fas fa-exclamation fa-lg" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion100.Answer" class="form-control answer-question-input" id="a1"></textarea>
@@ -33,13 +33,13 @@
             </div>
             <div class="row answer-question-container">
                 <div class="col-xs-1 col-xs-offset-1 question-label-container">
-                    <i class="fa fa-question fa-lg" aria-hidden="true"></i>
+                    <i class="fas fa-question fa-lg" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion100.Question" class="form-control answer-question-input" id="q1"></textarea>
                 </div>
                 <div class="col-xs-2 arrow-container-down">
-                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(1,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button>
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(1,'down')"><i class="fas fa-sort-down fa-lg" aria-hidden="true"></i></button>
                 </div>
             </div>
             <div class="row points-group">
@@ -49,24 +49,24 @@
             </div>
             <div class="row answer-question-container">
                 <div class="col-xs-1 col-xs-offset-1 answer-label-container">
-                    <i class="fa fa-exclamation fa-lg" aria-hidden="true"></i>
+                    <i class="fas fa-exclamation fa-lg" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion200.Answer" class="form-control answer-question-input" id="a2"></textarea>
                 </div>
                 <div class="col-xs-2 arrow-container-up">
-                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(2,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button>
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(2,'up')"><i class="fas fa-sort-up fa-lg" aria-hidden="true"></i></button>
                 </div>
             </div>
             <div class="row answer-question-container">
                 <div class="col-xs-1 col-xs-offset-1 question-label-container">
-                    <i class="fa fa-question fa-lg" aria-hidden="true"></i>
+                    <i class="fas fa-question fa-lg" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion200.Question" class="form-control answer-question-input" id="q2"></textarea>
                 </div>
                 <div class="col-xs-2 arrow-container-down">
-                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(2,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button>
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(2,'down')"><i class="fas fa-sort-down fa-lg" aria-hidden="true"></i></button>
                 </div>
             </div>
             <div class="row points-group">
@@ -76,24 +76,24 @@
             </div>
             <div class="row answer-question-container">
                 <div class="col-xs-1 col-xs-offset-1 answer-label-container">
-                    <i class="fa fa-exclamation fa-lg" aria-hidden="true"></i>
+                    <i class="fas fa-exclamation fa-lg" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion300.Answer" class="form-control answer-question-input" id="a3"></textarea>
                 </div>
                 <div class="col-xs-2 arrow-container-up">
-                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(3,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button>
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(3,'up')"><i class="fas fa-sort-up fa-lg" aria-hidden="true"></i></button>
                 </div>
             </div>
             <div class="row answer-question-container">
                 <div class="col-xs-1 col-xs-offset-1 question-label-container">
-                    <i class="fa fa-question fa-lg" aria-hidden="true"></i>
+                    <i class="fas fa-question fa-lg" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion300.Question" class="form-control answer-question-input" id="q3"></textarea>
                 </div>
                 <div class="col-xs-2 arrow-container-down">
-                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(3,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button>
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(3,'down')"><i class="fas fa-sort-down fa-lg" aria-hidden="true"></i></button>
                 </div>
             </div>
             <div class="row points-group">
@@ -103,24 +103,24 @@
             </div>
             <div class="row answer-question-container">
                 <div class="col-xs-1 col-xs-offset-1 answer-label-container">
-                    <i class="fa fa-exclamation fa-lg" aria-hidden="true"></i>
+                    <i class="fas fa-exclamation fa-lg" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion400.Answer" class="form-control answer-question-input" id="a4"></textarea>
                 </div>
                 <div class="col-xs-2 arrow-container-up">
-                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(4,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button>
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(4,'up')"><i class="fas fa-sort-up fa-lg" aria-hidden="true"></i></button>
                 </div>
             </div>
             <div class="row answer-question-container">
                 <div class="col-xs-1 col-xs-offset-1 question-label-container">
-                    <i class="fa fa-question fa-lg" aria-hidden="true"></i>
+                    <i class="fas fa-question fa-lg" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion400.Question" class="form-control answer-question-input" id="q4"></textarea>
                 </div>
                 <div class="col-xs-2 arrow-container-down">
-                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(4,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button>
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(4,'down')"><i class="fas fa-sort-down fa-lg" aria-hidden="true"></i></button>
                 </div>
             </div>
             <div class="row points-group">
@@ -130,18 +130,18 @@
             </div>
             <div class="row answer-question-container">
                 <div class="col-xs-1 col-xs-offset-1 answer-label-container">
-                    <i class="fa fa-exclamation fa-lg" aria-hidden="true"></i>
+                    <i class="fas fa-exclamation fa-lg" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion500.Answer" class="form-control answer-question-input" id="a5"></textarea>
                 </div>
                 <div class="col-xs-2 arrow-container-up">
-                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(5,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button>
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(5,'up')"><i class="fas fa-sort-up fa-lg" aria-hidden="true"></i></button>
                 </div>
             </div>
             <div class="row answer-question-container">
                 <div class="col-xs-1 col-xs-offset-1 question-label-container">
-                    <i class="fa fa-question fa-lg" aria-hidden="true"></i>
+                    <i class="fas fa-question fa-lg" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion500.Question" class="form-control answer-question-input" id="q5"></textarea>
