--- a/Øljeopardy/Views/Home/Index.cshtml
+++ b/Øljeopardy/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
                         }
                         <div class="row button-container">
                             <button type="button" onclick="loadAddGame()" class="menubutton has-spinner">
-                                <span class="spinner"><i class="fa fa-refresh fa-spin fa-lg"></i></span>
+                                <span class="spinner"><i class="fas fa-spinner fa-spin fa-lg"></i></span>
                                 <span class="btn-text">Opret nyt spil</span>
                             </button>
                         </div>
@@ -51,7 +51,7 @@
                         </div>
                         <div class="row button-container">
                             <button type="button" onClick="leaveGame(this)" class="menubutton has-spinner">
-                                <span class="spinner"><i class="fa fa-refresh fa-spin fa-lg"></i></span>
+                                <span class="spinner"><i class="fas fa-spinner fa-spin fa-lg"></i></span>
                                 <span class="btn-text">Forlad spillet</span>
                             </button>
                         </div>
