--- a/Øljeopardy/Views/Shared/_Layout.cshtml
+++ b/Øljeopardy/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>@ViewData["Title"] - Øljeopardy</title>
 
     <environment include="Development">
+        <link rel="stylesheet" href="~/lib/DataTables/media/css/jquery.dataTables.css" />
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/main.css" />
         <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
@@ -30,6 +31,7 @@
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/DataTables/media/js/jquery.dataTables.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/lib/signalr-client/dist/browser/signalr-client-1.0.0-alpha2-final.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
