--- a/Øljeopardy/Views/Home/Categories.cshtml
+++ b/Øljeopardy/Views/Home/Categories.cshtml
@@ -27,7 +27,10 @@
                         <a class="a-button" onclick="editCategory('@(category.Id)')"><i class="fas fa-edit fa-lg"></i></a>
                     </div>
                     <div class="col-xs-2">
-                        <a class="a-button" onclick="deleteCategory('@(category.Id)')"><i class="fas fa-trash-alt fa-lg"></i></a>
+                        <a class="a-button" onclick="deleteCategory('@(category.Id)')">
+                            <i class="fas fa-trash-alt
+                                                                                          fa-lg"></i>
+                        </a>
                     </div>
                 </div>
             </div>
