Uniformly sized buttons

--- a/Øljeopardy/wwwroot/css/Main.css
+++ b/Øljeopardy/wwwroot/css/Main.css
@@ -58,7 +58,7 @@ hr {
   font-size: inherit;
   background: none;
   cursor: pointer;
-  width: 65%;
+  width: 200px;
   height: 50px;
   text-transform: uppercase;
   letter-spacing: 1px;
