--- a/Øljeopardy/wwwroot/css/Main.css
+++ b/Øljeopardy/wwwroot/css/Main.css
@@ -225,3 +225,12 @@ hr {
 
 .has-spinner.active .btn-text {
   display: none; }
+
+table.dataTable > tbody {
+  border-right: 2px solid black; }
+
+table.dataTable > tbody > tr.odd {
+  background-color: rgba(255, 255, 255, 0.75); }
+
+table.dataTable > tbody > tr.even {
+  background-color: rgba(255, 255, 255, 0.25); }
