--- a/Øljeopardy/Views/Game/Add.cshtml
+++ b/Øljeopardy/Views/Game/Add.cshtml
@@ -11,9 +11,14 @@
                     <input asp-for="GameName" class="form-control" />
                 </div>
                 <div class="col-xs-12">
-                    <select class="form-control" asp-for="ChosenCategoryGuid"
-                            asp-items="@(new SelectList(Model.CategoryList, "Id", "Name"))" class="dropdown">
-                        <option selected disabled>Vælg en kategori</option>
+                    <select class="form-control" asp-for="ChosenOwnCategoryGuid"
+                            asp-items="@(new SelectList(Model.OwnCategories, "Id", "Name"))" class="dropdown">
+                        <option selected disabled>Vælg en af dine egne kategorier</option>
+                    </select>
+                    eller
+                    <select class="form-control" asp-for="ChosenSavedCategoryGuid"
+                            asp-items="@(new SelectList(Model.SavedCategories, "Id", "Name"))" class="dropdown">
+                        <option selected disabled>Vælg en gemt kategori</option>
                     </select>
                 </div>
                 <input type="button" class="menubutton" value="Opret spil" onClick="completeAddGame()" />
@@ -21,3 +26,19 @@
         </div>
     </form>
 </div>
+<script>
+    $(document).ready(function () {
+        $('#ChosenOwnCategoryGuid').on('change', function () {
+            var val = $(this).val();
+            if (val !== '') {
+                document.getElementById("ChosenSavedCategoryGuid").disabled = true;
+            }
+        });
+        $('#ChosenSavedCategoryGuid').on('change', function () {
+            var val = $(this).val();
+            if (val !== '') {
+                document.getElementById("ChosenOwnCategoryGuid").disabled = true;
+            }
+        });
+    });
+</script>
